// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render ExpensesSummary with empty message 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpensesSummary
    expensesCount={1}
    expensesTotal={123}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="content-container"
>
        <h1
                className="page-header__title"
        >
                Viewing 
                <span>
                        1
                </span>
                 
                expense
                totalling 
                <span>
                        $1.23
                </span>
        </h1>
        <div
                className="page-header__actions"
        >
                <Link
                        className="btn-layout"
                        replace={false}
                        to="/create"
                >
                        Add Expense
                </Link>
        </div>
</div>,
      "className": "page-header",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="page-header__title"
>
            Viewing 
            <span>
                        1
            </span>
             
            expense
            totalling 
            <span>
                        $1.23
            </span>
</h1>,
          <div
            className="page-header__actions"
>
            <Link
                        className="btn-layout"
                        replace={false}
                        to="/create"
            >
                        Add Expense
            </Link>
</div>,
        ],
        "className": "content-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Viewing ",
              <span>
                1
</span>,
              " ",
              "expense",
              "totalling ",
              <span>
                $1.23
</span>,
            ],
            "className": "page-header__title",
          },
          "ref": null,
          "rendered": Array [
            "Viewing ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": 1,
              },
              "ref": null,
              "rendered": 1,
              "type": "span",
            },
            " ",
            "expense",
            "totalling ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "$1.23",
              },
              "ref": null,
              "rendered": "$1.23",
              "type": "span",
            },
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Link
              className="btn-layout"
              replace={false}
              to="/create"
>
              Add Expense
</Link>,
            "className": "page-header__actions",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Add Expense",
              "className": "btn-layout",
              "replace": false,
              "to": "/create",
            },
            "ref": null,
            "rendered": "Add Expense",
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="content-container"
>
          <h1
                    className="page-header__title"
          >
                    Viewing 
                    <span>
                              1
                    </span>
                     
                    expense
                    totalling 
                    <span>
                              $1.23
                    </span>
          </h1>
          <div
                    className="page-header__actions"
          >
                    <Link
                              className="btn-layout"
                              replace={false}
                              to="/create"
                    >
                              Add Expense
                    </Link>
          </div>
</div>,
        "className": "page-header",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1
              className="page-header__title"
>
              Viewing 
              <span>
                            1
              </span>
               
              expense
              totalling 
              <span>
                            $1.23
              </span>
</h1>,
            <div
              className="page-header__actions"
>
              <Link
                            className="btn-layout"
                            replace={false}
                            to="/create"
              >
                            Add Expense
              </Link>
</div>,
          ],
          "className": "content-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Viewing ",
                <span>
                  1
</span>,
                " ",
                "expense",
                "totalling ",
                <span>
                  $1.23
</span>,
              ],
              "className": "page-header__title",
            },
            "ref": null,
            "rendered": Array [
              "Viewing ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": 1,
                },
                "ref": null,
                "rendered": 1,
                "type": "span",
              },
              " ",
              "expense",
              "totalling ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "$1.23",
                },
                "ref": null,
                "rendered": "$1.23",
                "type": "span",
              },
            ],
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="btn-layout"
                replace={false}
                to="/create"
>
                Add Expense
</Link>,
              "className": "page-header__actions",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Add Expense",
                "className": "btn-layout",
                "replace": false,
                "to": "/create",
              },
              "ref": null,
              "rendered": "Add Expense",
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should render expense Summary with expenses 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpensesSummary
    expensesCount={3}
    expensesTotal={100}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="content-container"
>
        <h1
                className="page-header__title"
        >
                Viewing 
                <span>
                        3
                </span>
                 
                expenses
                totalling 
                <span>
                        $1.00
                </span>
        </h1>
        <div
                className="page-header__actions"
        >
                <Link
                        className="btn-layout"
                        replace={false}
                        to="/create"
                >
                        Add Expense
                </Link>
        </div>
</div>,
      "className": "page-header",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="page-header__title"
>
            Viewing 
            <span>
                        3
            </span>
             
            expenses
            totalling 
            <span>
                        $1.00
            </span>
</h1>,
          <div
            className="page-header__actions"
>
            <Link
                        className="btn-layout"
                        replace={false}
                        to="/create"
            >
                        Add Expense
            </Link>
</div>,
        ],
        "className": "content-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Viewing ",
              <span>
                3
</span>,
              " ",
              "expenses",
              "totalling ",
              <span>
                $1.00
</span>,
            ],
            "className": "page-header__title",
          },
          "ref": null,
          "rendered": Array [
            "Viewing ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": 3,
              },
              "ref": null,
              "rendered": 3,
              "type": "span",
            },
            " ",
            "expenses",
            "totalling ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "$1.00",
              },
              "ref": null,
              "rendered": "$1.00",
              "type": "span",
            },
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Link
              className="btn-layout"
              replace={false}
              to="/create"
>
              Add Expense
</Link>,
            "className": "page-header__actions",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Add Expense",
              "className": "btn-layout",
              "replace": false,
              "to": "/create",
            },
            "ref": null,
            "rendered": "Add Expense",
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="content-container"
>
          <h1
                    className="page-header__title"
          >
                    Viewing 
                    <span>
                              3
                    </span>
                     
                    expenses
                    totalling 
                    <span>
                              $1.00
                    </span>
          </h1>
          <div
                    className="page-header__actions"
          >
                    <Link
                              className="btn-layout"
                              replace={false}
                              to="/create"
                    >
                              Add Expense
                    </Link>
          </div>
</div>,
        "className": "page-header",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1
              className="page-header__title"
>
              Viewing 
              <span>
                            3
              </span>
               
              expenses
              totalling 
              <span>
                            $1.00
              </span>
</h1>,
            <div
              className="page-header__actions"
>
              <Link
                            className="btn-layout"
                            replace={false}
                            to="/create"
              >
                            Add Expense
              </Link>
</div>,
          ],
          "className": "content-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Viewing ",
                <span>
                  3
</span>,
                " ",
                "expenses",
                "totalling ",
                <span>
                  $1.00
</span>,
              ],
              "className": "page-header__title",
            },
            "ref": null,
            "rendered": Array [
              "Viewing ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": 3,
                },
                "ref": null,
                "rendered": 3,
                "type": "span",
              },
              " ",
              "expenses",
              "totalling ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "$1.00",
                },
                "ref": null,
                "rendered": "$1.00",
                "type": "span",
              },
            ],
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="btn-layout"
                replace={false}
                to="/create"
>
                Add Expense
</Link>,
              "className": "page-header__actions",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Add Expense",
                "className": "btn-layout",
                "replace": false,
                "to": "/create",
              },
              "ref": null,
              "rendered": "Add Expense",
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
